<resources>
  <string name="app_name" translatable="false">AndroidAcademy</string>
  <string name="full_name">Full Name</string>
  <string name="avatar" translatable="false">Avatar</string>
  <string name="enter_a_message">Enter a message…</string>
  <string name="send_a_message">Send a message</string>
  <string name="description" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet sed euismod nisi porta lorem mollis. Nibh praesent tristique magna sit amet purus gravida quis. </string>
  <string name="job_title">Job Title</string>
  <string name="company_name">Company Name</string>
  <string name="email_not_found">E-mail client not found</string>
  <string name="linkedin" translatable="false">LinkedIn</string>
  <string name="vk" translatable="false">VK</string>
  <string name="browser_not_found">Any browsers were found</string>
  <string name="email_subject" translatable="false">Email Subject</string>
  <string name="title_activity_news_list" translatable="false">NewsList</string>
  <string name="menu_action_switch" translatable="false">Switch</string>
  <string name="date_string">MM/dd/yyyy</string>
  <string name="spinner_article">NY article</string>
  <string-array name="planets_array">
    <item>home</item>
    <item>opinion</item>
    <item>world</item>
    <item>national</item>
    <item>politics</item>
    <item>upshot</item>
    <item>nyregion</item>
    <item>business</item>
    <item>technology</item>
    <item>science</item>
    <item>health</item>
    <item>sports</item>
    <item>arts</item>
    <item>books</item>
    <item>movies</item>
    <item>theater</item>
    <item>sundayreview</item>
    <item>fashion</item>
    <item>tmagazine</item>
    <item>food</item>
    <item>travel</item>
    <item>magazine</item>
    <item>realestate</item>
    <item> automobiles</item>
    <item>obituaries</item>
    <item> insider</item>
  </string-array>

</resources>
