<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".Activities.AboutActivity">

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:contentDescription="@string/avatar"
    android:scaleType="fitCenter"
    android:src="@drawable/avatar"/>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginStart="28dp"
    android:layout_marginEnd="@dimen/default_margin"
    android:orientation="vertical"
    >
    <TextView
      android:id="@+id/tV_jobTitle"
      style="@style/textview_keyinfo"
      android:drawableStart="@drawable/ic_work_black_24dp"
      android:text="@string/job_title"/>

    <TextView
      android:id="@+id/tV_companyNameame"
      style="@style/textview_keyinfo"
      android:drawableStart="@drawable/ic_work_black_24dp"
      android:text="@string/company_name"
      />

    <View
      style="@style/view_line"/>
    <TextView
      android:id="@+id/tV_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:text="@string/description"
      android:textSize="@dimen/text_size"
      />
    <View
      style="@style/view_line"/>
    <EditText
      android:id="@+id/eT"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/enter_a_message"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:textSize="@dimen/text_size"/>
    <TextView
      android:id="@+id/tV_sendMessage"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:clickable="true"
      android:focusable="true"
      android:text="@string/send_a_message"
      android:textAlignment="textEnd"
      android:textAllCaps="true"
      android:textColor="@color/colorAccent"
      android:textSize="@dimen/text_size"/>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="bottom|center"
      android:orientation="horizontal">
      <ImageView
        android:id="@+id/iV_vk"
        style="@style/imageView_social"
        android:contentDescription="@string/vk"
        app:srcCompat="@drawable/ic_vk"/>
      <ImageView
        android:id="@+id/iV_li"
        style="@style/imageView_social"
        android:contentDescription="@string/linkedin"
        app:srcCompat="@drawable/ic_linkedin"/>

    </LinearLayout>

  </LinearLayout>

</LinearLayout>